frontend/test/should_pass/set_002.grg
using set_model_002;

rule putWithCast {
	a:A;
	
	modify {
		eval {
			a.stringSet = a.stringSet.put(a.intValue);
		}
	}
}

test testWithCast {
	a:A;
	
	if { a.intValue in a.stringSet; }
}

rule removeWithCast {
	a:A;
	
	modify {
		eval {
			a.stringSet = a.stringSet.remove(a.intValue);
		}
	}
}

rule setSize {
	a:A;
	
	if { a.intSet.size()==42; }
	
	modify {
		eval {
			a.intValue = a.stringSet.size();
		}
	}
}
