frontend/test/should_fail/array_001.grg
using array_model_001;

test testWrongType {
	a:A;
	
	if {
		a.stringValue in a.intArray;
	}
}